# code_learn_cpp

./: CMakeLists.txt  main.cpp
lib/: libcodes_learn_cpp.so.1  libcodes_learn_cpp.so.1.2
src/array/: array.cpp  array.h
src/linkage/: ExternalLinkage.cpp  Linkage.cpp  Linkage.h
src/object/: Object.h  Person.cpp  Person.h  Static.h  Teacher.cpp  Teacher.h
src/pointer/: Pointer.cpp  Pointer.h
src/reference/: Reference.cpp  Reference.h  RightReference.cpp  RightReference.h  UniversalReference.cpp  UniversalReference.h
src/strings/: Strings.h
